Mapped "reverse" buttons in Standard.kbd.cfg

--- a/mixxx/res/keyboard/Standard.kbd.cfg
+++ b/mixxx/res/keyboard/Standard.kbd.cfg
@@ -4,10 +4,11 @@ crossfader_down g
 
 [Channel1]
 play d
+cue_set Shift+d
 cue_default e
-cue_gotoandstop shift+e
-cue_set shift+d
+cue_gotoandstop Shift+e
 back a
+reverse Shift+a
 fwd s
 beatsync 1
 rate_perm_down F1
@@ -35,10 +36,11 @@ hotcue_4_clear Shift+v
 
 [Channel2]
 play l
+cue_set Shift+l
 cue_default o
-cue_gotoandstop shift+o
-cue_set shift+l
+cue_gotoandstop Shift+o
 back j
+reverse Shift+j
 fwd k
 beatsync 0
 rate_perm_down F5
