--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -389,7 +389,6 @@ sources = Split("""
                 soundsource.cpp
                 soundsourcemp3.cpp
                 soundsourceoggvorbis.cpp
-                soundsourceflac.cpp
 
                 widget/wwidget.cpp
                 widget/wlabel.cpp
@@ -590,12 +589,6 @@ if not conf.CheckLib('ogg'):
 	print 'Did not find libogg.a, libogg.lib, or the libogg development headers, exiting!'
 	Exit(1)
 
-if not conf.CheckHeader('FLAC/stream_decoder.h'):
-    print 'Did not find libFLAC development headers, exiting!'
-    Exit(1)
-elif not conf.CheckLib(['libFLAC', 'FLAC']):
-    print 'Did not find libFLAC development libraries, exiting!'
-    Exit(1)
 
 ## Check for OpenGL (it's messy to do it for all three platforms)
 ## XXX this should *NOT* have hardcoded paths like this
@@ -874,31 +867,30 @@ if 'win' in platformString:
 #SoundTouch
 #XXX this should be done with a subsconscript
 
-soundtouch_path = 'soundtouch'
-env.Append(CPPPATH=["""#lib/""" + soundtouch_path + """/include"""])
+soundtouch_path = 'soundtouch-1.4.1'
 
 env.Append(CPPPATH=['#lib/'+soundtouch_path])
 sources += Split("""engine/enginebufferscalest.cpp
-                    #lib/""" + soundtouch_path + """/source/SoundTouch/SoundTouch.cpp
-                    #lib/""" + soundtouch_path + """/source/SoundTouch/TDStretch.cpp
-                    #lib/""" + soundtouch_path + """/source/SoundTouch/RateTransposer.cpp
-                    #lib/""" + soundtouch_path + """/source/SoundTouch/AAFilter.cpp
-                    #lib/""" + soundtouch_path + """/source/SoundTouch/FIFOSampleBuffer.cpp
-                    #lib/""" + soundtouch_path + """/source/SoundTouch/FIRFilter.cpp
-                    #lib/""" + soundtouch_path + """/source/SoundTouch/PeakFinder.cpp
-                    #lib/""" + soundtouch_path + """/source/SoundTouch/BPMDetect.cpp
+                    #lib/""" + soundtouch_path + """/SoundTouch.cpp
+                    #lib/""" + soundtouch_path + """/TDStretch.cpp
+                    #lib/""" + soundtouch_path + """/RateTransposer.cpp
+                    #lib/""" + soundtouch_path + """/AAFilter.cpp
+                    #lib/""" + soundtouch_path + """/FIFOSampleBuffer.cpp
+                    #lib/""" + soundtouch_path + """/FIRFilter.cpp
+                    #lib/""" + soundtouch_path + """/PeakFinder.cpp
+                    #lib/""" + soundtouch_path + """/BPMDetect.cpp
                     """)
 
 if 'win' in platformString:
 	if bitwidth == '64':
-		sources += Split("""#lib/""" + soundtouch_path + """/source/SoundTouch/cpu_detect_x64_win.cpp""")
+		sources += Split("""#lib/""" + soundtouch_path + """/cpu_detect_x64_win.cpp""")
 	else:
-		sources += Split("""#lib/""" + soundtouch_path + """/source/SoundTouch/cpu_detect_x86_win.cpp""")
+		sources += Split("""#lib/""" + soundtouch_path + """/cpu_detect_x86_win.cpp""")
 else:
 	if bitwidth == '64':
-		sources += Split("""#lib/""" + soundtouch_path + """/source/SoundTouch/cpu_detect_x64_gcc.cpp""")
+		sources += Split("""#lib/""" + soundtouch_path + """/cpu_detect_x64_gcc.cpp""")
 	else:
-		sources += Split("""#lib/""" + soundtouch_path + """/source/SoundTouch/cpu_detect_x86_gcc.cpp""")
+		sources += Split("""#lib/""" + soundtouch_path + """/cpu_detect_x86_gcc.cpp""")
 
 
 #KissFFT
@@ -1044,9 +1036,7 @@ if int(flags['vinylcontrol']):
 	if 'win' in platformString:
 		sources += Split("""#lib/xwax/timecoder_win32.c """)
 	else:
-		sources += Split("""#lib/xwax/timecoder.c 
-							#lib/xwax/lut.c
-							#lib/xwax/pitch.c""")
+		sources += Split("""#lib/xwax/timecoder.c """)
 	env.Append(CPPPATH='#lib/scratchlib')
 	sources += Split("""#lib/scratchlib/DAnalyse.cpp """)
 	print "Vinyl Control... enabled"
@@ -1325,13 +1315,8 @@ else:
 # are enabled. All 64-bit CPUs have MMX and SSE as well.
 if bitwidth == '64' or (not 'win' in platformString and int(flags['optimize']) > 1) \
     or ('win' in platformString and int(flags['optimize']) > 2):
-    sources += Split("""#lib/""" + soundtouch_path + """/source/SoundTouch/mmx_optimized.cpp #lib/""" + soundtouch_path + """/source/SoundTouch/sse_optimized.cpp""")
+    sources += Split("""#lib/""" + soundtouch_path + """/mmx_optimized.cpp #lib/""" + soundtouch_path + """/sse_optimized.cpp""")
     env.Append(CPPDEFINES='ALLOW_X86_OPTIMIZATIONS')
-else:
-	#OWEN EDIT: oh, just build with it
-	if int(flags['tuned']) == 1:
-		sources += Split("""#lib/""" + soundtouch_path + """/source/SoundTouch/mmx_optimized.cpp #lib/""" + soundtouch_path + """/source/SoundTouch/sse_optimized.cpp""")
-		env.Append(CPPDEFINES='ALLOW_X86_OPTIMIZATIONS')
 
 # Enable SoundTouch 3DNow! optimizations for Windows (decides at runtime if they're useful)
 if 'win' in platformString and not bitwidth == '64':
