* repair sconscript from my mistakes

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -389,6 +389,7 @@ sources = Split("""
                 soundsource.cpp
                 soundsourcemp3.cpp
                 soundsourceoggvorbis.cpp
+                soundsourceflac.cpp
 
                 widget/wwidget.cpp
                 widget/wlabel.cpp
@@ -588,6 +589,12 @@ if not conf.CheckLib('vorbis'):
 if not conf.CheckLib('ogg'):
 	print 'Did not find libogg.a, libogg.lib, or the libogg development headers, exiting!'
 	Exit(1)
+if not conf.CheckHeader('FLAC/stream_decoder.h'):
+    print 'Did not find libFLAC development headers, exiting!'
+    Exit(1)
+elif not conf.CheckLib(['libFLAC', 'FLAC']):
+    print 'Did not find libFLAC development libraries, exiting!'
+    Exit(1)
 
 
 ## Check for OpenGL (it's messy to do it for all three platforms)
@@ -1037,7 +1044,9 @@ if int(flags['vinylcontrol']):
 	if 'win' in platformString:
 		sources += Split("""#lib/xwax/timecoder_win32.c """)
 	else:
-		sources += Split("""#lib/xwax/timecoder.c """)
+		sources += Split("""#lib/xwax/timecoder.c
+		#lib/xwax/lut.c
+		#lib/xwax/pitch.c""")
 	env.Append(CPPPATH='#lib/scratchlib')
 	sources += Split("""#lib/scratchlib/DAnalyse.cpp """)
 	print "Vinyl Control... enabled"
