* Accelerated library scanner by a factor of 4 * Mixxx.res causes compilation errors on Windows --> commented out in build script

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -852,9 +852,9 @@ sources += Split(""" #res/qrc_mixxx.cc """)
 
 # FIXME: This needs to be moved up and must be linked into the application to have any effect
 #Add Windows resource file with icons and such
-if 'win' in platformString:
-	env.RES('mixxx.rc')
-	sources += Split(""" mixxx.res """)
+#if 'win' in platformString:
+#	env.RES('mixxx.rc')
+#	sources += Split(""" mixxx.res """)
 
 #Tell SCons to build libraries that are bundled with Mixxx
 #===================================================
