Committing C. Stewart's WavPack soundsource plugin. It's off the main codepath so fine to go into the 1.8 branch.

--- a/mixxx/SConstruct
+++ b/mixxx/SConstruct
@@ -14,6 +14,7 @@ Import('build_dir', 'platformString')
 # SoundSourceM4A can get at sounddevice.cpp, which it needs to build
 # and link properly. This sucks but it's the best way I can find -- bkgood
 VariantDir("plugins/soundsourcem4a", "src", duplicate=0)
+VariantDir("plugins/soundsourcewv", "src", duplicate=0)
 #Build our soundsource plugins
 soundsource_plugins = SConscript(File('plugins/SConscript'), build_dir=Dir(build_dir + "/plugins"), duplicate=0, exports=['env', 'flags', 'platformString'])
 
