--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -739,6 +739,18 @@ if int(flags['m4a']) and not have_m4a:
                 print 'Did not find libfaad or the libfaad development headers, exiting!'
         Exit(1)
 
+have_wv = conf.CheckLib('wavpack')
+flags['wv'] = getFlags(env,'wv',0)
+if int(flags['wv']):
+	print "WavPack audio file support...",
+	if have_wv:
+		print "enabled"
+	else:
+		print "not found"
+		Exit(1)
+else:
+	print "WavPack audio file support disabled"
+
 
 env = conf.Finish()
 
