--- a/mixxx/plugins/SConscript
+++ b/mixxx/plugins/SConscript
@@ -5,7 +5,9 @@ Import('build_dir')
 Import('env', 'flags', 'platformString')
 
 plugins = [] 
-soundsourcem4a = SConscript(File('soundsourcem4a/SConscript'), build_dir=Dir(build_dir), duplicate=0, exports=['env','flags', 'platformString']) 
+soundsourcem4a = SConscript(File('soundsourcem4a/SConscript'), build_dir=Dir(build_dir + "/m4a"), duplicate=0, exports=['env','flags', 'platformString']) 
+soundsourcewv = SConscript(File('soundsourcewv/SConscript'), build_dir=Dir(build_dir + "/wv"), duplicate=0, exports=['env','flags', 'platformString'])
 plugins.extend(soundsourcem4a)
+plugins.extend(soundsourcewv)
 
 Return("plugins")
