Move wtracktableview.cpp/h to widget/

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -421,7 +421,7 @@ sources = Split("""
                 mathstuff.cpp
 
                 rotary.cpp
-                wtracktableview.cpp
+                widget/wtracktableview.cpp
                 widget/wtracktableviewheader.cpp
                 widget/wlibrarysidebar.cpp
                 widget/wlibrary.cpp
