Rewrite MixxxView as LegacySkinParser. Remove all hardcoding of decks 1 and 2.

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -400,6 +400,7 @@ sources = Split("""
 
                 widget/wwidget.cpp
                 widget/wlabel.cpp
+                widget/wtracktext.cpp
                 widget/wnumber.cpp
                 widget/wnumberpos.cpp
                 widget/wnumberrate.cpp
@@ -508,6 +509,8 @@ sources = Split("""
                 skin/imginvert.cpp
                 skin/imgloader.cpp
                 skin/imgcolor.cpp
+                skin/legacyskinparser.cpp
+                skin/colorschemeparser.cpp
 
                 trackinfoobject.cpp
                 player.cpp
