* removed data() method from all subclasses of BaseSqlTableModel * Handling of 'duration' column has moved to BaseSqlTableModel   (Less redundancy)

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -876,8 +876,8 @@ sources += Split(""" #res/qrc_mixxx.cc """)
 
 # FIXME: This needs to be moved up and must be linked into the application to have any effect
 #Add Windows resource file with icons and such
-if 'win' in platformString:
-	env.RES('mixxx.rc')
+#if 'win' in platformString:
+	#env.RES('mixxx.rc')
 	#Tobias Rafreider: What is the purpose of the following line, if the file doesn't exist?
 	#sources += Split(""" mixxx.res """)
 
