* code cleaning * added rating column

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -477,6 +477,10 @@ sources = Split("""
                 library/promotracksfeature.cpp
                 library/featuredartistswebview.cpp
                 library/bundledsongswebview.cpp
+				
+				library/stareditor.cpp
+				library/stardelegate.cpp
+				library/starrating.cpp
 
                 xmlparse.cpp
                 parser.cpp
