- Updated NSIS script & added sections for additional skins and MIDI mappings - Reverted install logo to one that actually works :) - Fixed "tuned" handling in Sconscript.env on Windows

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -1229,17 +1229,22 @@ if int(flags['tuned']):
 			print "Optimizing for this CPU... no (requires gcc >= 4.2.0)"
 	else:
 		if bitwidth == '64':
-			print "Optimizing for this CPU class (" + machine + ")... yes"
-			env.Append(CXXFLAGS = '/favor:' + machine)
+			if 'makerelease' in COMMAND_LINE_TARGETS:
+				print "Optimizing for this CPU class... no  (due to makerelease)"
+				# AMD64 is for AMD CPUs, EM64T is for Intel x64 ones
+				#   (as opposed to IA64 which uses a different compiler.)
+				# For a release, we choose to have code run about the same on both
+				env.Append(CXXFLAGS = '/favor:blend')
+			else:
+				print "Optimizing for this CPU class (" + machine + ")... yes"
+				env.Append(CXXFLAGS = '/favor:' + machine)
 		else:
 			print "Optimizing for this CPU... no (not supported on 32-bit MSVC)"
 else:
-	if bitwidth == '64':
-		if 'makerelease' in COMMAND_LINE_TARGETS:
-			print "Optimizing for this CPU class... no  (due to makerelease)"
-			# AMD64 is for AMD CPUs, EM64T is for Intel x64 ones (as opposed to IA64 which uses a different compiler.)
-			# For a release, we choose to have code run about the same on both
-			env.Append(CXXFLAGS = '/favor:blend')
+	if not 'win' in platformString:
+		print "Optimizing for this CPU... no"
+	else:
+		print "Optimizing for this CPU... no (not supported on 32-bit MSVC)"
 
 #Specific optimization
 flags['optimize'] = getFlags(env, 'optimize', 1)
