- NSIS script: install all skins (but 1.7 ones) by default - Adjust Sconscript.env

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -1230,7 +1230,7 @@ if int(flags['tuned']):
 	else:
 		if bitwidth == '64':
 			if 'makerelease' in COMMAND_LINE_TARGETS:
-				print "Optimizing for this CPU class... no  (due to makerelease)"
+				print "Optimizing for this CPU class... no (due to makerelease)"
 				# AMD64 is for AMD CPUs, EM64T is for Intel x64 ones
 				#   (as opposed to IA64 which uses a different compiler.)
 				# For a release, we choose to have code run about the same on both
@@ -1244,7 +1244,11 @@ else:
 	if not 'win' in platformString:
 		print "Optimizing for this CPU... no"
 	else:
-		print "Optimizing for this CPU... no (not supported on 32-bit MSVC)"
+		if bitwidth == '64':
+			print "Optimizing for this CPU class... no"
+			env.Append(CXXFLAGS = '/favor:blend')
+		else:
+			print "Optimizing for this CPU... no (not supported on 32-bit MSVC)"
 
 #Specific optimization
 flags['optimize'] = getFlags(env, 'optimize', 1)
