Added auto-replace of the version number with the branch name for non-release branches (to avoid confusion and defs_version.h maintenance when merging to/from release branches.)

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -81,6 +81,9 @@ def getSVNRevision(): # GPL code taken from http://trac.zeitherrschaft.org/zzub/
 
 def getBZRRevision():
 	return os.popen("bzr revno").readline().strip()
+	
+def getBZRBranchName():
+	return os.popen("bzr nick -q").readline().strip()
 
 def getMixxxVersion():
 	defs = File('#src/defs_version.h') #have to handle out-of-tree building, that's why the '#' :(
@@ -291,7 +294,10 @@ if os.environ.has_key('LDFLAGS'):
 ## instead, embed BZR version into build
 ## Put version info into a file, so it doesn't force a rebuild of everything :)
 f = open("build.h","w")
+version = getBZRBranchName()
 try:
+	if version.find("release") == -1:	# If this is not a release branch
+		f.write('#define VERSION "' + version + '"\n')	# use its name as the version number
 	f.write('#define BUILD_REV "' + getBZRRevision() + '"\n')
 finally:
 	f.close()
