--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -704,8 +704,6 @@ if platformString == 'osx':
 
 
 #hack: check for these here, before conf.Finish happens
-have_mp4v2_h = conf.CheckHeader('mp4v2/mp4v2.h')
-have_mp4 = (have_mp4v2_h and conf.CheckLib(['mp4v2', 'libmp4v2'])) or conf.CheckLib('mp4')
 
 # We have to check for libfaad version 2.6 or 2.7. In libfaad
 # version 2.7, the type for the samplerate is unsigned long*,
@@ -713,25 +711,29 @@ have_mp4 = (have_mp4v2_h and conf.CheckLib(['mp4v2', 'libmp4v2'])) or conf.Check
 # call parameter to CheckLibWithHeader to build a test file to
 # check which one this faad.h supports.
 
-have_faad = conf.CheckLib(['faad', 'libfaad'])
-have_faad_26 = False
-
-# Check for libfaad version 2.6. This check doesn't work correctly on Windows
-# And we build it manually anyway, so we know it's v2.7
-if have_faad and 'win' not in platformString:
-	have_faad_26 = (not conf.CheckLibWithHeader(
-                        'libfaad', 'faad.h', 'c++',
-                        call = 'faacDecInit2(0, 0, 0, (unsigned long*)0, (unsigned char*)0);',
-                        autoadd=False))
-
-have_m4a = have_mp4 and have_faad
 flags['m4a'] = getFlags(env, 'm4a', 0)
-if int(flags['m4a']) and not have_m4a:
-        if not have_mp4:
-                print 'Did not find libmp4v2 or the libmp4v2 development headers, exiting!'
-        if not have_faad:
-                print 'Did not find libfaad or the libfaad development headers, exiting!'
-        Exit(1)
+if int(flags['m4a']):
+    have_mp4v2_h = conf.CheckHeader('mp4v2/mp4v2.h')
+    have_mp4 = (have_mp4v2_h and conf.CheckLib(['mp4v2', 'libmp4v2'])) or conf.CheckLib('mp4')
+
+    have_faad = conf.CheckLib(['faad', 'libfaad'])
+    have_faad_26 = False
+
+    # Check for libfaad version 2.6. This check doesn't work correctly on Windows
+    # And we build it manually anyway, so we know it's v2.7
+    if have_faad and 'win' not in platformString:
+        have_faad_26 = (not conf.CheckLibWithHeader(
+                            'libfaad', 'faad.h', 'c++',
+                            call = 'faacDecInit2(0, 0, 0, (unsigned long*)0, (unsigned char*)0);',
+                            autoadd=False))
+
+    have_m4a = have_mp4 and have_faad
+    if int(flags['m4a']) and not have_m4a:
+            if not have_mp4:
+                    print 'Did not find libmp4v2 or the libmp4v2 development headers, exiting!'
+            if not have_faad:
+                    print 'Did not find libfaad or the libfaad development headers, exiting!'
+            Exit(1)
 
 have_wv = conf.CheckLib('wavpack')
 flags['wv'] = getFlags(env,'wv',0)
