Remove SVN cruft from SConscript. Fix force32 so that it sets machine to x86 on non-Windows builds. (was the cause of our 32-bit deb's claiming x86_64)

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -37,27 +37,26 @@ def determineArchitecture(platformString):
 	flags_force32 = ARGUMENTS.get('force32', 0)
 	flags_force64 = ARGUMENTS.get('force64', 0)
 	if int(flags_force32) and not int(flags_force64):
-		if 'win' in platformString:
-			machine = 'x86'
-		else:
+		if 'win' not in platformString:
 			env.Append(CCFLAGS = '-m32')
 			env.Append(CXXFLAGS = '-m32')
 			env.Append(LINKFLAGS = '-m32')
+                machine = 'x86'
 		bitwidth = '32'
 
 	#force 64-bit compile
 	if int(flags_force64) and not int(flags_force32):
-		if 'win' in platformString:
-			machine = 'AMD64'
-		else:
+		if 'win' not in platformString:
 			env.Append(CCFLAGS = '-m64')
 			env.Append(CXXFLAGS = '-m64')
 			env.Append(LINKFLAGS = '-m64')
+                machine = 'AMD64'
 		bitwidth = '64'
 	if int(flags_force64) or int(flags_force32):
-		print 'FORCING ' +bitwidth+ '-BIT BUILD: ' + platformString + ' ' + machine + ' (' + bitwidth + 'bit)'
+                print "FORCING %s-BIT BUILD: %s %s (%s bit)" % \
+                    (bitwidth, platformString, machine, bitwidth)
 
-	print 'Binary format: ' + architecture[1]
+	print 'Binary format: %s' % architecture[1]
 
 	Export('architecture')
 	Export('machine')	#So architecture-specific decisions & optimizations can be made in the SConscript
@@ -69,15 +68,6 @@ def getBuildDir(platformString, bitwidth):
 	build_dir = '%s%s_build' % (platformString[0:3],bitwidth)
 	Export('build_dir')
 	return build_dir
-
-def getSVNRevision(): # GPL code taken from http://trac.zeitherrschaft.org/zzub/browser/trunk/SConstruct
-	# if this is a repository, take the string from svnversion
-	svnversionpath = env.WhereIs('svnversion', os.environ['PATH'])
-	if os.path.isdir('../.svn') and (svnversionpath != None):  # we always start in .obj for some reason, so we must use ../.svn
-		rev = os.popen('svnversion ..').readline().strip()
-		if rev != "" and rev != "exported":
-			return rev
-	return ""
 
 def getBZRRevision():
 	return os.popen("bzr revno").readline().strip()
@@ -295,14 +285,6 @@ try:
 	f.write('#define BUILD_REV "' + getBZRRevision() + '"\n')
 finally:
 	f.close()
-
-### embed SVN version into build
-### Put version info into a file, so it doesn't force a rebuild of everything :)
-#f = open("#.mixxx_version.h","w")
-#try:
-#	f.write('#define BUILD_REV "' + getSVNRevision() + '"\n')
-#finally:
-#	f.close()
 
 #Mixxx sources to build
 sources = Split("""
