Pulling util functions out of SConscript.env into build/util.py

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -3,91 +3,12 @@
 import sys, os, platform
 import SCons.Script
 
+from build import util
+
 #Import('platform')
 #Import('machine')	#CPU architecture for optimization
 #Import('architecture')	#CPU type & binary format for optimization
 #Import('bitwidth')      #CPU bit width that can be forced (use this for most build items)
-
-def determinePlatform():
-	if os.name == 'nt':
-		print 'Platform: Windows ' #+ machine + ' (' + architecture[0] + ')'
-		platformString = 'windows'
-	elif sys.platform == 'linux2':
-		 print 'Platform: Linux '
-		 platformString = 'linux'
-	elif 'bsd' in sys.platform: #should cover {Net,Open,Free,DragonFly}BSD, but I'll be upfront: I've only built Mixxx on OpenBSD
-		 print 'Platform: BSD '
-		 platformString = 'bsd'
-	elif sys.platform == 'darwin':
-		 print 'Platform: OS X '
-		 platformString = 'osx'
-	else:
-		print 'Platform: Unknown (assuming Linux-like,) ' + machine
-		platformString = 'linux'
-	Export('platformString')
-	return platformString
-
-def determineArchitecture(platformString):
-	architecture = platform.architecture()
-	machine = platform.machine()
-	bitwidth = architecture[0][0:2];	# "32" or "64"
-
-	# Allow to override auto-detection (environment variables must already be set appropriately with SETENV.CMD /xp /x86 or /x64)
-	# (Auto-detection of 64-bit only works correctly if you're running a 64-bit version of Python, otherwise it'll see an x86 system)
-	flags_force32 = ARGUMENTS.get('force32', 0)
-	flags_force64 = ARGUMENTS.get('force64', 0)
-	if int(flags_force32) and not int(flags_force64):
-		if 'win' not in platformString:
-			env.Append(CCFLAGS = '-m32')
-			env.Append(CXXFLAGS = '-m32')
-			env.Append(LINKFLAGS = '-m32')
-                machine = 'x86'
-		bitwidth = '32'
-
-	#force 64-bit compile
-	if int(flags_force64) and not int(flags_force32):
-		if 'win' not in platformString:
-			env.Append(CCFLAGS = '-m64')
-			env.Append(CXXFLAGS = '-m64')
-			env.Append(LINKFLAGS = '-m64')
-                machine = 'AMD64'
-		bitwidth = '64'
-	if int(flags_force64) or int(flags_force32):
-                print "FORCING %s-BIT BUILD: %s %s (%s bit)" % \
-                    (bitwidth, platformString, machine, bitwidth)
-
-	print 'Binary format: %s' % architecture[1]
-
-	Export('architecture')
-	Export('machine')	#So architecture-specific decisions & optimizations can be made in the SConscript
-	Export('bitwidth')
-
-	return {"machine":machine, "bitwidth":bitwidth}
-
-def getBuildDir(platformString, bitwidth):
-	build_dir = '%s%s_build' % (platformString[0:3],bitwidth)
-	Export('build_dir')
-	return build_dir
-
-def getBZRRevision():
-	return os.popen("bzr revno").readline().strip()
-
-def getMixxxVersion():
-	defs = File('#src/defs_version.h') #have to handle out-of-tree building, that's why the '#' :(
-	#p = os.popen('grep -m 1 "#define VERSION" %s' % defs) #this is not cross-platform
-	#version = p.readline()
-	#p.close()
-
-	for line in open(str(defs)).readlines():
-		if line.strip().startswith("#define VERSION"):
-			version = line
-			break
-	else:
-		raise ValueError("Version not found")
-
-	#given "#define VERSION "...."" extract "....":
-	version = version.split()[-1].replace('"', '')
-	return version
 
 #Check for FFMPEG support
 def CheckFFMPEG(conf, sources):
@@ -169,7 +90,8 @@ def getFlags(env, argflag, default=0):
 flags = {}
 
 #Determine our platform
-platformString = determinePlatform()
+platformString = util.determine_platform()
+Export('platformString')
 
 #Figure out what the QT path is
 
@@ -207,14 +129,21 @@ elif 'win' in platformString:
 else:
 	raise Exception("Unknown platform, didn't make a env variable. Crashing")
 
-env['MIXXX_VERSION'] = getMixxxVersion() #should this be in the env?
+env['MIXXX_VERSION'] = util.get_mixxx_version() #should this be in the env?
 env['CPPDEFINES'] = [''] #Initialize this as a list, fixes a bug where first CPPDEFINE would get mangled
 
 #Figure out what architecture we are, set up bitwith and platform variables
-arch_stuff = determineArchitecture(platformString)
+arch_stuff = util.determine_architecture(platformString, ARGUMENTS, env)
+architecture = arch_stuff['architecture']
 machine = arch_stuff["machine"]
 bitwidth = arch_stuff["bitwidth"]
-build_dir = getBuildDir(platformString, bitwidth)
+build_dir = util.get_build_dir(platformString, bitwidth)
+
+Export('architecture')
+#So architecture-specific decisions & optimizations can be made in the SConscript
+Export('machine')
+Export('bitwidth')
+Export('build_dir')
 
 ## Global cache directory
 ## Put all project files in it so a rm -rf cache will clean up the config
@@ -282,7 +211,7 @@ if os.environ.has_key('LDFLAGS'):
 ## Put version info into a file, so it doesn't force a rebuild of everything :)
 f = open("build.h","w")
 try:
-	f.write('#define BUILD_REV "' + getBZRRevision() + '"\n')
+	f.write('#define BUILD_REV "' + util.get_bzr_revision() + '"\n')
 finally:
 	f.close()
 
