--- a/mixxx/plugins/soundsourcewv/SConscript
+++ b/mixxx/plugins/soundsourcewv/SConscript
@@ -5,7 +5,7 @@ import sys
 import SCons
 import shutil
 
-Import('env', 'flags', 'platformString')
+Import('build', 'flags')
 
 
 # On Posix default SCons.LIBPREFIX = 'lib', on Windows default SCons.LIBPREFIX = ''
@@ -20,10 +20,10 @@ wv_sources = [
 #=========================
 if int(flags['wv']):
 	SHLIBPREFIX='lib' #Makes the filename "libsoundsourcewv" consistently across platforms to make our lives easier.
-	if 'win' in platformString:
-		sswv_bin = env.SharedLibrary('soundsourcewv', wv_sources, LINKCOM  = [env['LINKCOM'], 'mt.exe -nologo -manifest ${TARGET}.manifest -outputresource:$TARGET;1'])
+	if build.platform_is_windows:
+		sswv_bin = build.env.SharedLibrary('soundsourcewv', wv_sources, LINKCOM  = [build.env['LINKCOM'], 'mt.exe -nologo -manifest ${TARGET}.manifest -outputresource:$TARGET;1'])
 	else:
-		sswv_bin = env.SharedLibrary('soundsourcewv', wv_sources)
+		sswv_bin = build.env.SharedLibrary('soundsourcewv', wv_sources)
 
 	#Pass this soundsourcewv library object file back to the SConscript above us.
 	Return("sswv_bin")
